WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70667
Fix crash below CoreIPC::MessageSender<WebKit::WebPage>::send<Messages::WebPageProxy::DidPerformDictionaryLookup>
https://bugs.webkit.org/show_bug.cgi?id=70667
Summary
Fix crash below CoreIPC::MessageSender<WebKit::WebPage>::send<Messages::WebPa...
Sam Weinig
Reported
2011-10-21 20:19:54 PDT
Fix crash below CoreIPC::MessageSender<WebKit::WebPage>::send<Messages::WebPageProxy::DidPerformDictionaryLookup>
Attachments
Patch
(1.95 KB, patch)
2011-10-21 20:21 PDT
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-10-21 20:21:52 PDT
Created
attachment 112063
[details]
Patch
Sam Weinig
Comment 2
2011-10-21 20:22:07 PDT
<
rdar://problem/9622186
>
Sam Weinig
Comment 3
2011-10-21 20:24:04 PDT
Committed
r98186
: <
http://trac.webkit.org/changeset/98186
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug